--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://containers-us-east-123.railway.app:3306/railway
+spring.datasource.url=jdbc:mysql://contain mysql://rootINtxjuAbTYZFbRFBpsRiKIcfkGjbaglX@caboose.proxy.rlwy.net:3306/railway
 spring.datasource.username=root
 spring.datasource.password=INtxjuAbTYZFbRFBpsRiKIcfkGjbaglX 
 
